# Tauri_Yew_Tests

./: .gitignore  README.md
boids_test/: Cargo.toml  index.html  index.scss
boids_test/src/: boid.rs  main.rs  math.rs  settings.rs  simulation.rs  slider.rs
plotters_test/: Cargo.toml  index.html
plotters_test/src/: main.rs
